--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,19 +5,20 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="com.example.myfirstapp.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +28,11 @@
         <activity
             android:name="com.example.myfirstapp.screen2"
             android:label="@string/app_name" >
-           
+        </activity>
+        <activity
+            android:name="com.example.myfirstapp.Register"
+            android:label="@string/title_activity_register" 
+            android:theme="@android:style/Theme.Holo" >
         </activity>
     </application>
 
