--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="com.example.myfirstapp.MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,8 +31,12 @@
         </activity>
         <activity
             android:name="com.example.myfirstapp.Register"
-            android:label="@string/title_activity_register" 
+            android:label="@string/title_activity_register"
             android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name="com.example.myfirstapp.Home"
+            android:label="@string/title_activity_home" >
         </activity>
     </application>
 
